--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
           <img src="./assets/logo.svg" id="miniLogo" alt="" />
         </div>
         <div id="userLogin" onclick="navigateToLogin()">
-                <span>
-                    <div>Login</div>
-                    <img src="./assets/user.svg" alt="Login"></img>
-                </span>
-        </div> 
-        <div class="headerMenu" style="font-size:30px;cursor:pointer" onclick="openNav()">
-            <div class="hamburger"></div>
-            <div class="hamburger"></div>
-            <div class="hamburger"></div>
-        </div>        
-    </div>
+          <span style="display: flex;">
+            <div>Login</div>
+            <img src="./assets/user.svg" alt="Login" />
+          </span>
+        </div>
+        <div
+          class="headerMenu"
+          style="font-size: 30px; cursor: pointer;"
+          onclick="openNav()"
+        >
+          <div class="hamburger"></div>
+          <div class="hamburger"></div>
+          <div class="hamburger"></div>
+        </div>
+      </div>
     </header>
 
     <div class="PageHeader">
