--- a/documentatie/index.html
+++ b/documentatie/index.html
@@ -47,7 +47,7 @@
 	<p>Am folosit o arhitectura de baza, adica Clientul trimite o cerere Serverului, Serverul apeleaza Baza de Date, iar raspunsul este trimis catre Client tot prin intermediul Serverului</p>
 	<section id="diagramaarhitecturala">
       <h3>Diagrama arhitecturala</h3>
-       <img src="diagrame/ClassDiagram.png" alt="Diagrama arhitecturala" width="125%"> 
+       <img src="../documentatie/assets/project.png" alt="Diagrama arhitecturala" width="125%"> 
     </section>
     <section id="diagramaarhitecturala">
       <h3>Module</h3>
