--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <div class="container">
         <img src="./assets/krumbach.jpeg" alt="" />
         <button class="addbtn">Add</button>
-        <p>
+        <p id="desc">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
           excepturi ducimus iste consectetur praesentium sed expedita rem error
           illum commodi.
