--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
               <option value="Eticheta">Eticheta</option>
             </select>
 
-            <label for="price">Price range:</label>
-            <select name="Price range" id="price_range">
-              <option value="Sub 100">Sub 100</option>
+            <label for="value">Value:</label>
+            <select name="Value" id="price_range">
+              <option value="50">50</option>
               <option value="100-200">100-200</option>
               <option value="100-200">100-200</option>
               <option value="500-1.000">500-1.000</option>
