--- a/index.html
+++ b/index.html
@@ -131,9 +131,7 @@
         <img src="./assets/krumbach.jpeg" alt="" />
         <button class="addbtn">Add</button>
         <p id="desc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-          excepturi ducimus iste consectetur praesentium sed expedita rem error
-          illum commodi.
+          Lorem ipsum dolor sit amet
           <span class="pop_button" data-modal-target="#modal">Show more</span>
           <!-- De unde se apeleaza modalul-->
         </p>
@@ -175,10 +173,10 @@
     <div id="overlay"></div>
 
     <!--MODAL -->
-    <div class="button_container">
+    <!-- <div class="button_container">
       <a class="mybutton" onclick="">Previous</a>
       <a class="mybutton" onclick="">Next</a>
-    </div>
+    </div> -->
     <script src="./js/HamburgerMenu.js"></script>
     <script src="./js/dropdown.js"></script>
     <script src="./js/shrinkHeaderTitle.js"></script>
