--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </div>
 
     <div class="basic-grid">
-      <div class="container">
+      <!-- div class="container">
         <img src="./assets/krumbach.jpeg" alt="" />
         <button class="addbtn">Add</button>
         <p>
@@ -144,21 +144,19 @@
           excepturi ducimus iste consectetur praesentium sed expedita rem error
           illum commodi.
           <span class="pop_button" data-modal-target="#modal">Show more</span>
-          <!-- De unde se apeleaza modalul-->
         </p>
-      </div>
+      </div> -->
 
-      <div class="container">
-        <img src="./assets/coca.jpeg" alt="" />
+      <!-- <div class="container">
+        <img src="./project-node-app/images/1d32a3d9ff33bd5ebcd4feaf0dd976da.png" alt="" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
           excepturi ducimus iste consectetur praesentium sed expedita rem error
           illum commodi.
           <span class="pop_button" data-modal-target="#modal">Show more</span>
-          <!-- De unde se apeleaza modalul-->
         </p>
         <button class="addbtn">Add</button>
-      </div>
+      </div>  -->
     </div>
 
     <!--MODAL -->
