--- a/html/upload.html
+++ b/html/upload.html
@@ -145,13 +145,13 @@
 
                 }
                 fd.append('image', form.image.files[0]);
-                request.open('GET', 'http://localhost:3000/articles', true);
+                request.open('POST', 'http://localhost:3000/articles', true);
                 
                 request.getResponseHeader('Access-Control-Allow-Origin', '*');
                 request.getAllResponseHeaders('Access-Control-Allow-Origin', '*');
                 // request.setRequestHeader('Content-Type', 'application/json');
                 // console.log(requestData.image.length);
-                request.send();
+                request.send(fd);
 
                 
                 // request.setRequestHeader('Content-Type', 'application/json');
