Modified chart, made rss creator and docbook format

--- a/html/chart.html
+++ b/html/chart.html
@@ -16,6 +16,9 @@
         <canvas id="myChart"></canvas>
       </div>
     </div>
+
+    <a type="application/rss+xml" href="feed.rss">RSS feed </a>
+
     <script src="../js/chart.js"></script>
   </body>
 </html>
