almost finished admin panel page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="./index.html">Home</a>
             <a href="./html/export.html">Export</a>
             <a href="./html/upload.html">Upload article</a>
+            <a href="../html/adminPanel.html">Admin panel</a>
           </div>
         </div>
         <div>
