admin panel get users, get user articles and delete users functionality

--- a/html/adminPanel.html
+++ b/html/adminPanel.html
@@ -50,81 +50,7 @@
         <p id="headerTitle">Admin panel</p>
       </div>
       <div id="admin-panel-section">
-        <div id="user-list-container">
-
-          <div class="user-information-container">
-            <i class="fas fa-times delete-user-icon"></i>
-            <img src="../assets/user.svg" alt="Login" class="user-image" />
-            <div class="user-details">
-              <p class="full-name">Mindrisoru Tudor</p>
-              <p class="email">tudorgabriel1398@gmail.com</p>
-            </div>
-          </div>
-
-          <div class="user-information-container">
-            <i class="fas fa-times delete-user-icon"></i>
-            <img src="../assets/user.svg" alt="Login" class="user-image" />
-            <div class="user-details">
-              <p class="full-name">Mindrisoru Tudor</p>
-              <p class="email">tudorgabriel1398@gmail.com</p>
-            </div>
-          </div>
-
-          <div class="user-information-container">
-            <i class="fas fa-times delete-user-icon"></i>
-            <img src="../assets/user.svg" alt="Login" class="user-image" />
-            <div class="user-details">
-              <p class="full-name">Mindrisoru Tudor</p>
-              <p class="email">tudorgabriel1398@gmail.com</p>
-            </div>
-          </div>
-
-          <div class="user-information-container">
-            <i class="fas fa-times delete-user-icon"></i>
-            <img src="../assets/user.svg" alt="Login" class="user-image" />
-            <div class="user-details">
-              <p class="full-name">Mindrisoru Tudor</p>
-              <p class="email">tudorgabriel1398@gmail.com</p>
-            </div>
-          </div>
-
-          <div class="user-information-container">
-            <i class="fas fa-times delete-user-icon"></i>
-            <img src="../assets/user.svg" alt="Login" class="user-image" />
-            <div class="user-details">
-              <p class="full-name">Mindrisoru Tudor</p>
-              <p class="email">tudorgabriel1398@gmail.com</p>
-            </div>
-          </div>
-
-          <div class="user-information-container">
-            <i class="fas fa-times delete-user-icon"></i>
-            <img src="../assets/user.svg" alt="Login" class="user-image" />
-            <div class="user-details">
-              <p class="full-name">Mindrisoru Tudor</p>
-              <p class="email">tudorgabriel1398@gmail.com</p>
-            </div>
-          </div>
-
-          <div class="user-information-container">
-            <i class="fas fa-times delete-user-icon"></i>
-            <img src="../assets/user.svg" alt="Login" class="user-image" />
-            <div class="user-details">
-              <p class="full-name">Mindrisoru Tudor</p>
-              <p class="email">tudorgabriel1398@gmail.com</p>
-            </div>
-          </div>
-
-          <div class="user-information-container">
-            <i class="fas fa-times delete-user-icon"></i>
-            <img src="../assets/user.svg" alt="Login" class="user-image" />
-            <div class="user-details">
-              <p class="full-name">Mindrisoru Tudor</p>
-              <p class="email">tudorgabriel1398@gmail.com</p>
-            </div>
-          </div>
-
-        </div>
+        <div id="user-list-container"></div>
 
         <div id="users-pagination-controller">
           <div class="previews-button">
