--- a/html/upload.html
+++ b/html/upload.html
@@ -142,7 +142,7 @@
               console.log(request.responseText);
           };
           var fd = new FormData(form);
-          request.open('GET', 'http://localhost:3000/articles', true);
+          request.open('POST', 'http://localhost:3000/articles', true);
           request.setRequestHeader("Access-Control-Expose-Headers", "Authorization");
           request.send();
         }
