init update article dialog

--- a/html/adminPanel.html
+++ b/html/adminPanel.html
@@ -49,99 +49,23 @@
       <div class="PageHeader">
         <p id="headerTitle">Admin panel</p>
       </div>
+
       <div id="admin-panel-section">
         <div id="user-list-container"></div>
 
-        <div id="users-pagination-controller">
-          <div class="previews-button">
-            <p>Previews</p>
-          </div>
-          <div class="next-button">
-            <p>Next</p>
-          </div>
-        </div>
-
-
         <div id="articles-container">
           <div id="chosen-user">
-            <p>Mindrisoru Tudor `s articles</p>
+            <p>User `s articles</p>
           </div>
-          <div id="article-list">
-            <div class="article">
-              <img src="https://www.finestore.ro/image/cache/catalog/products/HB305-500x615.jpg" alt="">
-              <div class="article-details">
-                <p class="article-title">Jack Daniels Bottle</p>
-                <p class="article-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At laudantium velit animi, aspernatur vel, assumenda adipisci quam, aliquid provident fugiat temporibus quia quis eius fuga eligendi est corrupti eaque earum!</p>
-                <div class="article-controllers">
-                  <div class="update-article-button">
-                    <i class="fas fa-edit"></i>
-                    <span>UPDATE</span>
-                  </div>
-                  <div class="delete-article-button">
-                    <i class="fas fa-trash-alt"></i>
-                    <span>DELETE</span>
-                  </div>
-                </div>
-              </div>
-            </div>
 
-            <div class="article">
-              <img src="https://www.finestore.ro/image/cache/catalog/products/HB305-500x615.jpg" alt="">
-              <div class="article-details">
-                <p class="article-title">Jack Daniels Bottle</p>
-                <p class="article-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At laudantium velit animi, aspernatur vel, assumenda adipisci quam, aliquid provident fugiat temporibus quia quis eius fuga eligendi est corrupti eaque earum!</p>
-                <div class="article-controllers">
-                  <div class="update-article-button">
-                    <i class="fas fa-edit"></i>
-                    <span>UPDATE</span>
-                  </div>
-                  <div class="delete-article-button">
-                    <i class="fas fa-trash-alt"></i>
-                    <span>DELETE</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="article">
-              <img src="https://www.finestore.ro/image/cache/catalog/products/HB305-500x615.jpg" alt="">
-              <div class="article-details">
-                <p class="article-title">Jack Daniels Bottle</p>
-                <p class="article-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At laudantium velit animi, aspernatur vel, assumenda adipisci quam, aliquid provident fugiat temporibus quia quis eius fuga eligendi est corrupti eaque earum!</p>
-                <div class="article-controllers">
-                  <div class="update-article-button">
-                    <i class="fas fa-edit"></i>
-                    <span>UPDATE</span>
-                  </div>
-                  <div class="delete-article-button">
-                    <i class="fas fa-trash-alt"></i>
-                    <span>DELETE</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="article">
-              <img src="https://www.finestore.ro/image/cache/catalog/products/HB305-500x615.jpg" alt="">
-              <div class="article-details">
-                <p class="article-title">Jack Daniels Bottle</p>
-                <p class="article-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. At laudantium velit animi, aspernatur vel, assumenda adipisci quam, aliquid provident fugiat temporibus quia quis eius fuga eligendi est corrupti eaque earum!</p>
-                <div class="article-controllers">
-                  <div class="update-article-button">
-                    <i class="fas fa-edit"></i>
-                    <span>UPDATE</span>
-                  </div>
-                  <div class="delete-article-button">
-                    <i class="fas fa-trash-alt"></i>
-                    <span>DELETE</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-          </div>
+        </div>
         </div>
       </div>
+
+      <div id="update-article-dialog">
+        
+      </div>
+
       <script src="../js/adminPanel.js"></script>
   </body>
   </html>
