Updated export,upload and index

--- a/html/export.html
+++ b/html/export.html
@@ -38,7 +38,7 @@
       <div class="container"></div>
       <div class="export_buttons">
         <button id="CSV" onclick="exportCSV()">Export CSV</button>
-        <button id="DOC">Export DocBook</button>
+        <button id="DOC" onclick="exportDocBook()">Export DocBook</button>
       </div>
     </div>
 
