--- a/html/upload.html
+++ b/html/upload.html
@@ -71,12 +71,14 @@
           name="brand"
           required
         /><br />
-        <label for="alcoholic" class="checkLab">Is alcoholic: <input
-          type="checkbox"
-          id="alcoholic"
-          name="alcoholic"
-          class="checkInp"
-          required
+        <label for="alcoholic" class="checkLab"
+          >Is alcoholic:
+          <input
+            type="checkbox"
+            id="alcoholic"
+            name="alcoholic"
+            class="checkInp"
+            required
         /></label>
         <br />
         <input
@@ -107,7 +109,7 @@
         <label for="priceRange">Price range: </label>
 
         <select id="priceRange" name="priceRange" class="inpText">
-          <option>50</option>
+          <option>Under 100</option>
           <option>100-200</option>
           <option>200-500</option>
           <option>500-1000</option>
@@ -116,37 +118,40 @@
           <option>2.000-3.000</option>
           <option>3.000-5.00</option>
           <option>4.000-5.000</option>
-          <option>Peste 5.000</option>
+          <option>Over 5.000</option>
         </select>
 
         <label for="type">Type: </label>
         <select id="type" name="type" class="inpText">
           <option>Cap</option>
-          <option>Etiquette</option>
-          <option>Bottle</option>
+          <option>Label</option>
+          <option>Cork</option>
         </select>
 
         <br /><br />
-        
-        <input class="inpSub" type="submit" id="inpsub"><br />
+
+        <input class="inpSub" type="submit" id="inpsub" /><br />
       </form>
       <img id="blah" src="#" alt="" /><br />
     </section>
     <script>
-      window.addEventListener('load', function () {
-        function sendForm () {
+      window.addEventListener("load", function () {
+        function sendForm() {
           var request = new XMLHttpRequest();
           request.onload = function () {
-              console.log('we got response');
-              console.log(request.responseText);
+            console.log("we got response");
+            console.log(request.responseText);
           };
           var fd = new FormData(form);
-          request.open('GET', 'http://localhost:3000/articles', true);
-          request.setRequestHeader("Access-Control-Expose-Headers", "Authorization");
+          request.open("POST", "http://localhost:3000/articles", true);
+          request.setRequestHeader(
+            "Access-Control-Expose-Headers",
+            "Authorization"
+          );
           request.send();
         }
-        const form = document.getElementById( "uplForm" );
-        form.addEventListener( "submit", function ( event ) {
+        const form = document.getElementById("uplForm");
+        form.addEventListener("submit", function (event) {
           event.preventDefault();
           console.log(event);
           sendForm();
