--- a/html/adminPanel.html
+++ b/html/adminPanel.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/solid.min.css" >
     <link rel="stylesheet" href="../css/upload.css" />
     <link rel="stylesheet" href="../css/adminPanel.css">
+    
 
   </head>
   <body>
@@ -23,6 +24,7 @@
             <a href="./export.html">Export</a>
             <a href="./upload.html">Upload article</a>
             <a href="./adminPanel.html">Admin panel</a>
+            <a href="../html/chart.html">Statistics</a>
           </div>
         </div>
         <div>
