--- a/html/upload.html
+++ b/html/upload.html
@@ -19,6 +19,7 @@
             <a href="../html/export.html">Export</a>
             <a href="../html/upload.html">Upload article</a>
             <a href="../html/adminPanel.html">Admin panel</a>
+            <a href="../html/chart.html">Statistics</a>
           </div>
         </div>
         <div>
