Updated filters and menu

--- a/html/adminPanel.html
+++ b/html/adminPanel.html
@@ -24,7 +24,7 @@
             <a href="./export.html">Export</a>
             <a href="./upload.html">Upload article</a>
             <a href="./adminPanel.html">Admin panel</a>
-            <a href="../html/chart.html">Statistics</a>
+            <a href="../html/chart.html">Most popular</a>
           </div>
         </div>
         <div>
