--- a/html/upload.html
+++ b/html/upload.html
@@ -19,7 +19,7 @@
             <a href="../html/export.html">Export</a>
             <a href="../html/upload.html">Upload article</a>
             <a href="../html/adminPanel.html">Admin panel</a>
-            <a href="../html/chart.html">Statistics</a>
+            <a href="../html/chart.html">Most popular</a>
           </div>
         </div>
         <div>
@@ -100,8 +100,8 @@
           required
         ></textarea
         ><br />
-        <label for="currState">Current State: </label>
-        <select id="currState" name="currState" class="inpText">
+        <label for="currentState">Current State: </label>
+        <select id="currentState" name="currentState" class="inpText">
           <option>Brand New</option>
           <option>Slighty Damaged</option>
           <option>Damaged</option>
