--- a/html/export.html
+++ b/html/export.html
@@ -18,7 +18,7 @@
             <a href="../html/export.html">Export</a>
             <a href="../html/upload.html">Upload article</a>
             <a href="../html/adminPanel.html">Admin panel</a>
-            <a href="../html/chart.html">Statistics</a>
+            <a href="../html/chart.html">Most popular</a>
           </div>
         </div>
         <div>
