--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
             >&times;</a
           >
-          <div style="margin-top: 200px;">
+          <div style="margin-top: 150px;">
             <a href="./index.html">Home</a>
             <a href="./html/export.html">Export</a>
             <a href="./html/upload.html">Upload article</a>
@@ -104,7 +104,7 @@
               <option value="Label">Label</option>
             </select>
 
-            <label for="value">Value:</label>
+            <label for="value">Price range:</label>
             <select name="Value" id="price_range">
               <option value="Any">Any</option>
               <option value="Under_100">Under 100</option>
