finished admin panel

--- a/html/adminPanel.html
+++ b/html/adminPanel.html
@@ -80,8 +80,9 @@
         <div class="inputs-container">
           <label for="input-current-state">Current state</label>
           <select name="input-current-state" id="input-current-state">
-            <option value="Brand new">Brand new</option>
-            <option value="Slighty damaged">Slighty damaged</option>
+            <option value="Any">Any</option>
+            <option value="Brand New">Brand new</option>
+            <option value="Slighty Damaged">Slighty damaged</option>
             <option value="Damaged">Damaged</option>
           </select> 
         </div>
@@ -89,6 +90,7 @@
         <div class="inputs-container">
           <label for="input-country">Country</label>
           <select name="input-country" id="input-country">
+            <option value="Any">Any</option>
             <option value="Russia">Russia</option>
             <option value="Germany">Germany</option>
             <option value="United Kingdom">United Kingdom</option>
@@ -136,6 +138,7 @@
         <div class="inputs-container">
           <label for="price-range-input">Price range</label>
           <select name="price-range-input" id="price-range-input">
+            <option value="Any">Any</option>
             <option value="Under 100">Under 100</option>
             <option value="100-200">100-200</option>
             <option value="200-500">200-500</option>
@@ -151,13 +154,14 @@
 
         <div class="inputs-container">
           <label for="input-year">Year</label>
-          <input type="number" min="0" max="2020" name="input-year">
+          <input type="number" min="0" max="2020" name="input-year" id="input-year">
         </div>
 
         <div class="inputs-container">
           <label for="input-type">Type</label>
           <select name="input-type" id="input-type">
-            <option value="Cape">Cape</option>
+            <option value="Any">Any</option>
+            <option value="Cap">Cap</option>
             <option value="Label">Label</option>
             <option value="Cork">Cork</option>
           </select>
