Updated export/statistics page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           >
           <div style="margin-top: 150px;">
             <a href="./index.html">Home</a>
-            <a href="./html/export.html">Export</a>
+            <a href="./html/export.html">Statistics</a>
             <a href="./html/upload.html">Upload article</a>
             <a href="../html/adminPanel.html">Admin panel</a>
             <a href="../html/chart.html">Most popular</a>
