--- a/html/adminPanel.html
+++ b/html/adminPanel.html
@@ -21,7 +21,7 @@
           >
           <div style="margin-top: 150px;">
             <a href="../index.html">Home</a>
-            <a href="./export.html">Export</a>
+            <a href="./export.html">Statistics</a>
             <a href="./upload.html">Upload article</a>
             <a href="./adminPanel.html">Admin panel</a>
             <a href="../html/chart.html">Most popular</a>
