--- a/html/chart.html
+++ b/html/chart.html
@@ -17,7 +17,7 @@
           >
           <div style="margin-top: 150px;">
             <a href="../index.html">Home</a>
-            <a href="../html/export.html">Export</a>
+            <a href="../html/export.html">Statistics</a>
             <a href="../html/upload.html">Upload article</a>
             <a href="../html/adminPanel.html">Admin panel</a>
             <a href="../html/chart.html">Most popular</a>
@@ -46,18 +46,12 @@
     </a>
 
     <div>
-      <div
-        class="chart-container"
-        style="position: relative; height: 40vh; width: 80vw;"
-      >
+      <div class="chart-container">
         <canvas id="myChart"></canvas>
       </div>
     </div>
 
     <script src="../js/chart.js"></script>
-
-    <script src="../js/export_list.js"></script>
-    <script src="../js/export.js"></script>
     <script src="../js/HamburgerMenu.js"></script>
   </body>
 </html>
