--- a/html/export.html
+++ b/html/export.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Export</title>
     <link rel="stylesheet" href="../css/export.css" />
+    <link rel="stylesheet" href="../css/chart.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
   </head>
   <body>
     <header>
@@ -15,7 +17,7 @@
           >
           <div style="margin-top: 150px;">
             <a href="../index.html">Home</a>
-            <a href="../html/export.html">Export</a>
+            <a href="../html/export.html">Statistics</a>
             <a href="../html/upload.html">Upload article</a>
             <a href="../html/adminPanel.html">Admin panel</a>
             <a href="../html/chart.html">Most popular</a>
@@ -36,7 +38,13 @@
       </div>
     </header>
     <div class="page">
-      <div class="container"></div>
+      <div class="export_buttons">
+        <button id="Stat1" onclick="option()">Stats #1</button>
+        <button id="Stat2" onclick="option()">Stats #2</button>
+      </div>
+      <div class="chart-container">
+        <canvas id="myStatsChart"></canvas>
+      </div>
       <div class="export_buttons">
         <button id="CSV" onclick="exportCSV()">Export CSV</button>
         <button id="DOC" onclick="exportDocBook()">Export DocBook</button>
@@ -44,7 +52,7 @@
     </div>
 
     <script src="../js/export_list.js"></script>
-    <script src="../js/export.js"></script>
     <script src="../js/HamburgerMenu.js"></script>
+    <script src="../js/stats_chart.js"></script>
   </body>
 </html>
