--- a/html/upload.html
+++ b/html/upload.html
@@ -79,14 +79,50 @@
           required
         /></label>
         <br />
-        <input
-          class="inpText"
-          type="text"
-          placeholder="Country"
-          id="country"
-          name="country"
-          required
-        /><br />
+        <label for="country">Country:</label>
+        <select name="country" id="country" class="inpText">
+          <option value="Russia">Russia</option>
+          <option value="Germany">Germany</option>
+          <option value="United Kingdom">United Kingdom</option>
+          <option value="France">France</option>
+          <option value="Italy">Italy</option>
+          <option value="Spain">Spain</option>
+          <option value="Ukraine">Ukraine</option>
+          <option value="Poland">Poland</option>
+          <option value="Romania">Romania</option>
+          <option value="Netherlands">Netherlands</option>
+          <option value="Belgium">Belgium</option>
+          <option value="Czech Republic">Czech Republic</option>
+          <option value="Greece">Greece</option>
+          <option value="Portugal">Portugal</option>
+          <option value="Sweden">Sweden</option>
+          <option value="Hungary">Hungary</option>
+          <option value="Belarus">Belarus</option>
+          <option value="Austria">Austria</option>
+          <option value="Serbia">Serbia</option>
+          <option value="Switzerland">Switzerland</option>
+          <option value="Bulgaria">Bulgaria</option>
+          <option value="Denmark">Denmark</option>
+          <option value="Finland">Finland</option>
+          <option value="Slovakia">Slovakia</option>
+          <option value="Norway">Norway</option>
+          <option value="Ireland">Ireland</option>
+          <option value="Croatia">Croatia</option>
+          <option value="Moldova">Moldova</option>
+          <option value="Bosnia and Herzegovina"
+            >Bosnia and Herzegovina</option
+          >
+          <option value="Albania">Albania</option>
+          <option value="Lithuania">Lithuania</option>
+          <option value="North Macedonia">North Macedonia</option>
+          <option value="Slovenia">Slovenia</option>
+          <option value="Latvia">Latvia</option>
+          <option value="Estonia">Estonia</option>
+          <option value="Montenegro">Montenegro</option>
+          <option value="Luxembourg">Luxembourg</option>
+          <option value="Malta">Malta</option>
+          <option value="Iceland">Iceland</option>
+        </select>
         <textarea
           class="inpText"
           placeholder="Description"
