--- a/html/upload.html
+++ b/html/upload.html
@@ -180,13 +180,13 @@
             console.log(request.responseText);
           };
           var fd = new FormData(form);
-          request.open("POST", "http://localhost:3000/articles", true);
+          request.open("GET", "http://localhost:3000/stats/brand", true);
           request.setRequestHeader(
             "Access-Control-Expose-Headers",
             "Authorization"
           );
           // request.setRequestHeader("Content-type", "application/json");
-          request.send(fd);
+          request.send();
         }
         const form = document.getElementById("uplForm");
         form.addEventListener("submit", function (event) {
