--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <label for="value">Price range:</label>
             <select name="Value" id="price_range">
               <option value="Any">Any</option>
-              <option value="Under_100">Under 100</option>
+              <option value="Under 100">Under 100</option>
               <option value="100-200">100-200</option>
               <option value="100-200">100-200</option>
               <option value="500-1.000">500-1.000</option>
@@ -116,7 +116,7 @@
               <option value="2.000-3.000">2.000-3.000</option>
               <option value="3.000-4.000">3.000-4.000</option>
               <option value="4.000-5.000">4.000-5.000</option>
-              <option value="Over_5.000">Over 5.000</option>
+              <option value="Over 5.000">Over 5.000</option>
             </select>
 
             <label for="state">Current state:</label>
@@ -134,25 +134,27 @@
     </div>
 
     <div class="basic-grid">
-      <!-- div class="container">
+      <!-- <div class="container">
         <img src="./assets/krumbach.jpeg" alt="" />
         <button class="addbtn">Add</button>
-        <p id="desc">
+        <p>
           Lorem ipsum dolor sit amet
           <span class="pop_button" data-modal-target="#modal">Show more</span>
         </p>
       </div> -->
 
       <!-- <div class="container">
-        <img src="./project-node-app/images/1d32a3d9ff33bd5ebcd4feaf0dd976da.png" alt="" />
+        <img
+          src="./project-node-app/images/1d32a3d9ff33bd5ebcd4feaf0dd976da.png"
+          alt=""
+        />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
           excepturi ducimus iste consectetur praesentium sed expedita rem error
           illum commodi.
           <span class="pop_button" data-modal-target="#modal">Show more</span>
         </p>
-        <button class="addbtn">Add</button>
-      </div>  -->
+      </div> -->
     </div>
 
     <!--MODAL -->
@@ -164,15 +166,7 @@
       <div class="modal-body">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, nulla
         praesentium. Quia velit amet maxime magni. Illo impedit placeat quae.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
-        accusantium nam veniam nulla quo similique cupiditate odio aut
-        laboriosam autem modi perspiciatis, rem numquam, animi fugiat ipsa
-        officiis. Perspiciatis reiciendis quisquam impedit voluptatem, repellat
-        aperiam error expedita illum debitis dolor in suscipit ipsa totam quo
-        doloribus hic libero laboriosam harum unde magnam incidunt?
-        Reprehenderit doloribus cupiditate, facere laborum rerum aliquam ipsam
-        sit quam eos fuga vel deleniti aut earum quod sed veritatis, fugit
-        optio, iste delectus nulla itaque commodi accusantium?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
       </div>
     </div>
     <div id="overlay"></div>
@@ -181,8 +175,8 @@
     <script src="./js/HamburgerMenu.js"></script>
     <script src="./js/dropdown.js"></script>
     <script src="./js/shrinkHeaderTitle.js"></script>
-    <script src="./js/modal.js"></script>
     <script src="./index.js"></script>
     <script src="./js/filters.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
