finished navigation with hamburger menu

--- a/html/export.html
+++ b/html/export.html
@@ -15,12 +15,12 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
             >&times;</a
           >
-          <div style="margin-top: 150px;">
-            <a href="../index.html">Home</a>
+          <div style="margin-top: 150px;" id="nav-container">
+            <!-- <a href="../index.html">Home</a>
             <a href="../html/export.html">Statistics</a>
             <a href="../html/upload.html">Upload article</a>
             <a href="../html/adminPanel.html">Admin panel</a>
-            <a href="../html/chart.html">Most popular</a>
+            <a href="../html/chart.html">Most popular</a> -->
           </div>
         </div>
         <div>
