--- a/html/login.html
+++ b/html/login.html
@@ -26,11 +26,11 @@
                 <form id="auth-form" onsubmit="onSubmit(event)">
                   <div class="inputs">
                     <label for="email" class="labels">E-mail</label>
-                    <input name="email" type="email" placeholder="Ex: test@test.com" id="email-input">
+                    <input name="email" type="email" placeholder="Ex: test@test.com" id="email-input" required>
                     <label for="password" class="labels" >Password</label>
-                    <input name="password" type="password" placeholder="Ex: myPassword" id="password-input">
+                    <input name="password" type="password" placeholder="Ex: myPassword" id="password-input" required>
                     <label for="fullName" class="labels full-name-group hide">Your full name</label>
-                    <input name="fullName" type="text" placeholder="Ex: Popescu Ion" class="full-name-group hide" id="full-name-input">
+                    <input name="fullName" type="text" placeholder="Ex: Popescu Ion" class="full-name-group hide" id="full-name-input" required>
                   </div>
                   <button type="submit" class="submit-button">Submit</button>
                 </form>
