--- a/html/chart.html
+++ b/html/chart.html
@@ -40,13 +40,7 @@
 
     <div>
       <div class="chart-container">
-        <a
-          target="_blank"
-          class="rssButton"
-          href="http://localhost:5500/project-node-app/xml/rss.xml"
-        >
-          RSS feed
-        </a>
+        <button class="rssButton" id="rssButton">RSS feed</button>
         <canvas id="myChart"></canvas>
       </div>
     </div>
